# Solutions

./: .gitignore  Math.md  PythonKids  README.md  licence  pyproject.toml  result  setup.cfg
.github/: README.md
Algorithms/: Algorithms_on_Python.ipynb  Algorithms_Лекция №3.ipynb  Arrays.ipynb  Arrays_Лекция №5.ipynb  Functions.ipynb  Functions_Лекция №4.ipynb  Sorts_Лекция №6.ipynb  build_house.py  face.py  face_refactored.py  face_structured.py  gravity.py  readme.md  rectangles.py  scape.py
DataCamp/: Dictionaries.py  matplotlib.ipynb  pluraSight-1.py
Grokking/: binary_search.py
Koch/: Koch.pde  Segment.pde
Python101/: FromZero2Hero.ipynb  every_odd_line.py  mean.py  oh_my_py.ipynb
PythonKids/: Chapter-10_Useful_Modules.ipynb  Chapter-3_lists_tuples_dicts.ipynb  Chapter-5_If_that_then_that.ipynb  Chapter-6_For&While_loops.ipynb  Chapter-7_functions&modules.ipynb  Chapter-8_Classes&Objects.ipynb  Chapter-9_Built-in_Functions.ipynb  README.md  each_2_word_in_str.py  myfile.txt  not_fun_joke.py  output2.txt  turtle_draw.py
Sololearn/: functions.py  readme.md
Stepik/: A&B.py  Calculator.ipynb  GC-content.py  Herons-1.py  Herons-2.py  Herons-3.py  arithmetic-mean_short.py  arithmetic_mean.py  break_continue.py  calculator.py  cytosine.py  i_asterix.py  logic.py  lucky_ticket.py  malev-2.py  malev.py  max_min.py  max_min2.py  multiplication_short.py  multiplication_table.py  my_calc.py  pathlib_p.py  robot.py  sleep.ipynb  star_square.py  stepik.py  string_method.py  sum_of_range.py  sum_of_range2.py  while.ipynb  while_i.py  while_loop.py  while_loop_ex.py  (+1 more)
(+240 files in other folders)
